featured image now works

--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -31,6 +31,19 @@
             <p>{{marsDoc.news_p}}</p>
         </div>
     </div>
+
+    <div class="col-md-9 col-sm-12">
+      <div class="col-sm-12">
+        <h2>Featured Mars Image</h2>
+      </div>
+      <div class="col-sm-12">
+        <img src="{{ marsDoc.featured_image_url }}" alt="Featured Image">
+      </div>
+    </div>
     
+    <div class="col-md-9 col-sm-12">
+      
+    </div>
+
   </div>
 </body>
