got all four hemispheres and added comments

--- a/Mission_to_Mars/static/css/style.css
+++ b/Mission_to_Mars/static/css/style.css
@@ -1,3 +1,13 @@
-h1 {
-    color: black;
+.featuredImg {
+    max-width:100%;
+    max-height:100%;
+}
+
+.hemi {
+    padding:2% 2%;
+}
+
+.figure img {
+    max-width: 100%;
+    max-height: 100%;
 }
